[package]
name = "pride-rs"
version = "0.0.2"
edition = "2024"
rust-version = "1.85"
description = "🏳️‍🌈 A highly customizable pride flags for WASM frameworks like Yew, Dioxus, and Leptos."
license = "MIT"
keywords = ["pride", "yew", "rust", "dioxus", "leptos"]
categories = ["web-programming", "science"]
repository = "https://github.com/opensass/pride-rs"
documentation = "https://docs.rs/pride-rs"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
exclude = ["/assets", "/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", default-features = false, optional = true }
dioxus = { version = "0.6.3", optional = true }
leptos = { version = "0.8.0", optional = true }
web-sys = { version = "0.3.77", optional = true }
strum_macros = "0.27.1"
strum = "0.27.1"
phf = { version = "0.12.1", features = ["macros"] }
log = { version = "0.4.27", optional = true }
dioxus-logger = { version = "0.6.2", optional = true }

[features]
yew = ["dep:yew", "log", "web-sys"]
dio = ["dioxus", "dioxus-logger"]
lep = ["leptos"]

[profile.release]
opt-level = "z"
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
bump2version = "0.1.6"
